force-app/main/default/objects/KT_OCR_Provider_Config__mdt/KT_OCR_Provider_Config__mdt.object-meta.xml
<CustomObject>
    <description>Active OCR provider configuration for switching between AWS Textract and Azure Form Recognizer without code changes.</description>
    <label>KT OCR Provider Config</label>
    <pluralLabel>KT OCR Provider Configs</pluralLabel>
</CustomObject>