force-app/main/default/objects/KT_OCR_Provider_Config__mdt/fields/Async_Polling_Interval__c.field-meta.xml
<CustomField>
    <fullName>Async_Polling_Interval__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Polling interval in seconds for async OCR jobs.</description>
    <label>Async Polling Interval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>