force-app/main/default/objects/KT_OCR_Provider_Config__mdt/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <description>Relative endpoint path appended to the Named Credential base URL.</description>
    <label>Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>