force-app/main/default/objects/KT_OCR_Provider_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this provider configuration is used by the OCR service.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>