force-app/main/default/objects/KT_OCR_Provider_Config__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum retry attempts before the OCR job is sent to manual review.</description>
    <label>Max Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>