force-app/main/default/objects/KT_OCR_Provider_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Named Credential API name used for callouts. Credentials are never stored in custom metadata.</description>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>