force-app/main/default/objects/KT_OCR_Provider_Config__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>OCR provider name.</description>
    <label>Provider Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AWS Textract</fullName><default>true</default><label>AWS Textract</label></value>
            <value><fullName>Azure Form Recognizer</fullName><default>false</default><label>Azure Form Recognizer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>